# micaexp

./: .env_template  .gitignore  README.md  app.py  maindash.py  micaexp.py  pyproject.toml  requirements.txt
api_calls/: microspot_api.py
assets/: style.css
scripts/: data_capteurs.py
shell/: contes.json  request_microspot.sh
src/: fonctions.py  glob_vars.py
src/api_calls/: microspot_api.py  xair.py
src/layout/: content.py  sidebar.py  styles.py
src/layout/content_utils/: build_graph_data.py  make_24h_avg.py  make_boxplot.py  make_corr_matrix.py  make_diurnal_cycle.py  make_map.py  make_summary_table.py  make_timeseries.py
src/routines/: micro_capteurs.py  microspot_api.py  observation_api.py  xair.py
src/utils/: fonctions.py  glob_vars.py
